--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,1 +1,21 @@
-{"short_name": "JUST GO", "name": "JUST GO CARIBBEAN", "icons": [{"src": "logo512.png", "sizes": "512x512", "type": "image/png"}], "start_url": ".", "display": "standalone", "theme_color": "#009688", "background_color": "#ffffff"}
+{
+    "short_name": "JUST GO",
+    "name": "JUST GO CARIBBEAN",
+    "icons": [
+      {
+        "src": "logo192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "logo512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      }
+    ],
+    "start_url": ".",
+    "display": "standalone",
+    "theme_color": "#008080",
+    "background_color": "#ffffff"
+  }
+  
