--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
     "icons": [
       {
         "src": "logo192.png",
-        "sizes": "192x192",
-        "type": "image/png"
+        "type": "image/png",
+        "sizes": "192x192"
       },
       {
         "src": "logo512.png",
-        "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/png",
+        "sizes": "512x512"
       }
     ],
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#008080",
+    "theme_color": "#ffffff",
     "background_color": "#ffffff"
   }
   
